# foldhold

./: CMakeLists.txt  README.md  euler.c
app/: CMakeLists.txt
app/src/: euler.c  rk4.c
doc/: CMakeLists.txt
doc/plot/: CMakeLists.txt
doc/plot/script/: euler_plot.plt  rk4_plot.plt
doc/src/: abeld.bst  doksi.tex  latex_template.tex  nyilatkozat.tex  references.bib
euler/: main.c
rk4/: main.c
